--- a/.gitconfig
+++ b/.gitconfig
@@ -30,15 +30,15 @@
 [color]
       ui = auto
 [alias]
-      cp = cherry-pick
+	cp = cherry-pick
       st = status -s
       cl = clone
-      ci = commit
+      c = commit
       co = checkout
       br = branch 
       diff = diff --word-diff
       dc = diff --cached
-	  logl = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
+	logl = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
       r = reset
       r1 = reset HEAD^
       r2 = reset HEAD^^
@@ -46,3 +46,17 @@
       rh1 = reset HEAD^ --hard
       rh2 = reset HEAD^^ --hard
       logtree = log --graph --oneline --decorate --all
+      ca = commit --amend --no-edit
+      cb = checkout -b
+      ap = add --patch
+      ci = commit --interactive
+      delete = push origin --delete
+      log-graph = log --graph --all  --decorate --oneline
+      log-standup = !git log --since yesterday --author $(git config user.email) --pretty=short
+      hist = log --pretty=format:\"%C(yellow)%h%C(reset) %C(green)%ad%C(reset) %C(red)|%C(reset) %s %C(bold blue)[%an]%C(reset)%C(yellow)%d%C(reset)\" --graph --date=short
+reply
+
+[rebase]
+	autostash = true
+[stash]
+	showPatch = true
